--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "typescript": "5.0.4"
   },
   "dependencies": {
-    "@vueuse/nuxt": "^10.1.2",
-    "dotenv": "^16.1.3"
+    "@vueuse/nuxt": "^10.1.2"
   }
 }
